--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FinalProject</string>
+    <string name="app_name">GeoPics</string>
     <string name="loading_error_message">We couldn\'t connect to Flickr. Check your internet connection and try again.</string>
     <string name="action_settings">Settings</string>
 
